# biblizap-server

./: .env  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  apply_migrations.sh  biblizap.example.toml  biblizap.toml  build.rs  build.sh  install.sh
frontend/: .gitignore  Cargo.toml  index.html
frontend/css/: custom.css
frontend/src/: common.rs  form.rs  legal.rs  main.rs  navbar.rs  pubmed.rs  pubmed_results.rs  search.rs  seed_selection.rs  systematic_review.rs  usage.rs  wall.rs
frontend/src/results/: article.rs  card.rs  download.rs  filter.rs  footer.rs  item.rs  mod.rs  organize.rs  pubmed.rs  row.rs
frontend/src/search/: denylist.rs  mod.rs
frontend/src/table/: article.rs  download.rs  footer.rs  mod.rs
frontend/src/usage/: data.rs  mod.rs
lib/: Cargo.toml  LICENSE.md  README.md
lib/src/: common.rs  lib.rs
lib/src/lens/: article.rs  citations.rs  completion.rs  counter.rs  error.rs  id_types.rs  lensid.rs  mod.rs  request.rs
lib/src/lens/cache/: mod.rs  postgres.rs  sqlite.rs
lib/src/pubmed/: mod.rs
migrations/: 001_tracking_tables.sql  002_denylist_table.sql  003_rename_denylists_to_corpora.sql
scripts/: openalex_dump_explore.py
src/: common.rs  corpus.rs  denylist.rs  main.rs  pubmed.rs  snowball.rs  tracking.rs  usage.rs
src/openalex/: mod.rs
