[package]
name = "biblizap-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
actix-web-static-files = { version = "4.1", features = ["static-files-03"] }
biblizap-rs = { git = "https://github.com/BibliZap/biblizap-rs", version = "1.1.3", features = [
    "cache-postgres",
] }
clap = { version = "4.5.60", features = ["derive"] }
color-print = "0.3.7"
config = { version = "0.15.19", features = ["toml"] }
env_logger = "0.11.9"
log = "0.4.29"
reqwest = "0.13.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
static-files = "0.3.1"
thiserror = "2.0.18"


[build-dependencies]
static-files = "0.3.1"
change-detection = "1.2"
