[package]
name = "biblizap-server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.10"
actix-web = "4.13.0"
actix-web-static-files = { version = "4.1", features = ["static-files-03"] }
biblizap-rs = { git = "https://github.com/BibliZap/biblizap-rs", version = "1.2.2", features = [
    "cache-postgres",
] }
clap = { version = "4.6.1", features = ["derive"] }
color-print = "0.3.7"
config = { version = "0.15.22", features = ["toml"] }
crc32fast = "1.5"
dotenvy = "0.15.7"
env_logger = "0.11.10"
hex = "0.4.3"
log = "0.4.29"
num_cpus = "1.17"
reqwest = "0.13.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "uuid",
] }
static-files = "0.3.1"
thiserror = "2.0.18"
tokio = "1.52.1"
urlencoding = "2.1"
uuid = { version = "1.23", features = ["v4", "serde"] }
yew-router = "0.20.0"
zstd = "0.13.3"


[build-dependencies]
static-files = "0.3.1"
change-detection = "1.2"
