[package]
name = "biblizap-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.4.0"
gloo-net = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
wasm-bindgen = "0.2.126"
wasm-bindgen-futures = "0.4.76"
web-sys = { version = "0.3.103", features = [
    "Navigator",
    "Clipboard",
    "Blob",
    "Url",
    "HtmlElement",
    "DragEvent",
    "DataTransfer",
    "CanvasRenderingContext2d",
    "HtmlCanvasElement",
] }
yew = { version = "0.23.0", features = ["csr"] }
yew-router = "0.20.0"
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = "0.10.1"
shuffle = "0.2.1"
js-sys = "0.3.103"
gloo-utils = "0.3.0"
csv = "1.4.0"
paste = "1.0.15"
inflections = "1.1.1"
gloo-file = "0.4.0"
chrono = "0.4.45"
rust_xlsxwriter = { version = "0.95.0", features = ["wasm", "serde"] }
url = "2.5.8"
hex = "0.4.3"
time = { version = "0.3", features = ["wasm-bindgen", "macros"] }
